2007-01-29  Marc Singer  <elf@cerise.buici.com>

	* Added alternatives to Debian configs.

2007-01-29  Marc Singer  <elf@zealous.synapsedev.com>

	* Makefile (SUBLEVEL): Rolled rev for block cache fix.

	* src/drivers/drv-ext2.c: inode/block cache flush was broken.
	Now, it is not.

2007-01-27  Marc Singer  <elf@buici.com>

	* usr/apex-env.8: Man page.

	* usr/link.h: Added cleanup code to Link object.  It isn't
	strictly necessary, but it is good hygiene.

2007-01-27  Marc Singer  <elf@cerise.buici.com>

	* Makefile: 1.4.12 for new environment program and to prepare for
	publishing a new release.

	* usr/apex-env.cc: New user-mode program for updating the APEX
	environment once the system is booted.  It replaces the printenv
	program that was only able to print the environment as it stood,
	combining the flash data with the defaults from APEX.  This
	program is smart enough to be able to set/unset variables and
	erase the whole environment.

2007-01-25  Marc Singer  <elf@zealous.synapsedev.com>

	* src/mach-lh7a40x/clcdc-companion.c: Removed the DDS hack form
	the LCD init on Companion.  No DDS circuit present anymore.

2007-01-23  Marc Singer  <elf@cerise.buici.com>

	* src/lib/memtest.c (memory_test_0): Revised the memory test
	walking bit loop on advice from a collegue.  Made the full memory
	test an option on top of the basic memory test.

2007-01-23  Marc Singer  <elf@zealous.synapsedev.com>

	* src/mach-lh7a40x/variation-companion.c (variation_init): Added
	variation support to the Companion.  Pressing three keys at
	power-on will activate the variation boot.

2007-01-13  Marc Singer  <elf@cerise.buici.com>

	* src/arch-arm/entry/reset.c (__section): Slight change to MMU
	disabling code.

	* src/arch-arm/entry/mmu-xscale.h (CACHE_CLEAN_D): Revised cache
	clean code to match Nicolas Pitre's work in the Linux kernel.

2007-01-09  Marc Singer  <elf@zealous.synapsedev.com>

	* src/drivers/drv-fis.c (end_of_table): Added back the